--- a/index.html
+++ b/index.html
@@ -1,206 +1,245 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Dental Clinic in Nashik">
+	<meta name="keywords" content="dental, clinic, nashik, hospital, x-ray, teeth">
+	<!-- <meta name="author" content="Chinmay Shah"> -->
+	<title>Hospital Name</title>
 	<link rel="stylesheet" type="text/css" href="Styles/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Styles/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script type="text/javascript" src="Scripts/bootstrap.js"></script>
-	<script>
-    $(function(){
-        $('a').each(function(){
-            if ($(this).prop('href') == window.location.href) {
-                $(this).parent().addClass('active'); $(this).parents('li').addClass('active');
-            }
-        });
-    });
-	</script>
 </head>
 <body>
-	<!-- Navbar -->
 	<header>
-		<div class="container">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			  <a class="navbar-brand" href="#">
-			  <img src="Assets/hospital-sign-260nw-42697471.webp" class="nav-logo">
-			  Hospital Name
-			  </a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			    <span class="navbar-toggler-icon"></span>
-			  </button>
-
-			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#our-facilities">Facilities</a>
-			      </li>
-			      <li class="nav-item">
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-			      </li>
-			    </ul>
-			    <ul class="navbar-nav">
-			      <li class="nav-item active">
-			        <a class="nav-link" href="#">Call <span class="sr-only">(current)</span></a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">Address</a>
-			      </li>
-			      <li class="nav-item">
-			      </li>
-			    </ul>
-			  </div>
-			</nav>
-		</div>
+		<!-- Navbar -->
+		<div class="navbar-placeholder"></div>
 	</header>
 	<main>
-		<!-- Slide Show -->
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		  <div class="carousel-inner center-block">
-		  	<ol class="carousel-indicators">
-			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-			 </ol>
-		    <div class="carousel-item active">
-		      <img class="d-block w-100" src="Assets/Battlefield-4-Wallpaper-HD.jpeg" alt="First slide">
-		    </div>
-		    <div class="carousel-item">
-		      <img class="d-block w-100" src="Assets/bumblebee_transformers_the_last_knight_2017_5k-1920x1080.jpeg" alt="Second slide">
-		    </div>
-		    <div class="carousel-item">
-		      <img class="d-block w-100" src="Assets/bumblebee_transformers_the_last_knight-wide.jpeg" alt="Third slide">
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
+		<!-- Jumbotron Image -->
+		<div class="jumbotron jumbotron-fluid" id="hero-container">
+			<div id="hero-content">
+				<p class="hero-moto">Lorem Ipsum Gibberish is Our Moto Long motto.... Very lonnngg Longgggg....</p>
+				<a href="#">
+					<button type="link" class="appointment">
+						Book an Appointment
+					</button>
+				</a>
+			</div>			
 		</div>
-		<!-- Facilities -->
-		<div class="container no-margin" id="our-facilities">
-			<div class="row">
-				<h2 class="main-title col-sm-12">Our Facilities</h2>
 
-				<div class="fac-card" id="fac1">
-					<div class="fac-card-inner">
-						<div class="fac-card-front">
-							<img src="Assets/assassins_creed_unity_arno-wallpaper-3554x1999.jpg" class="fac-images">
-						</div>
-						<div class="fac-card-back">
-							<h2>Facility 1</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-						</div>
-					</div>
+		<!-- Three incomprehensible rectangles -->
+		<div class="container ad">
+			<div class="row">
+				<div class="col-md-3 ad-columns" id="col-1"></div>
+				<div class="col-md-3 ad-columns" id="col-2"></div>
+				<div class="col-md-3 ad-columns" id="col-3"></div>
+			</div>
+		</div>
+
+		<!-- About Us -->
+		<div class="container ad">
+			<div class="row">
+				<div class="col-md-9 about-us">
+					<img src="Assets/about-image.jpg" class="about-image">
+					<article class="about-article">
+						<h2 class="about-head">About Us</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</p>
+					</article>
 				</div>
-				<div class="fac-card" id="fac1">
-					<div class="fac-card-inner">
-						<div class="fac-card-front">
-							<img src="Assets/assassins_creed_unity_arno-wallpaper-3554x1999.jpg" class="fac-images">
-						</div>
-						<div class="fac-card-back">
-							<h2>Facility 1</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="fac-card" id="fac1">
-					<div class="fac-card-inner">
-						<div class="fac-card-front">
-							<img src="Assets/assassins_creed_unity_arno-wallpaper-3554x1999.jpg" class="fac-images">
-						</div>
-						<div class="fac-card-back">
-							<h2>Facility 1</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="fac-card" id="fac1">
-					<div class="fac-card-inner">
-						<div class="fac-card-front">
-							<img src="Assets/assassins_creed_unity_arno-wallpaper-3554x1999.jpg" class="fac-images">
-						</div>
-						<div class="fac-card-back">
-							<h2>Facility 1</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="fac-card" id="fac1">
-					<div class="fac-card-inner">
-						<div class="fac-card-front">
-							<img src="Assets/assassins_creed_unity_arno-wallpaper-3554x1999.jpg" class="fac-images">
-						</div>
-						<div class="fac-card-back">
-							<h2>Facility 1</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="fac-card" id="fac1">
-					<div class="fac-card-inner">
-						<div class="fac-card-front">
-							<img src="Assets/assassins_creed_unity_arno-wallpaper-3554x1999.jpg" class="fac-images">
-						</div>
-						<div class="fac-card-back">
-							<h2>Facility 1</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-							</p>
+			</div>
+		</div>
+
+		<!-- What Makes Us Different -->
+		<div class="different-page ad">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-9">
+						<h5 class="different-head">Some Text not Visible</h5>
+						<h2 class="different-head">What Makes Us Different</h2>
+						<div class="row">
+							<div class="col-lg-4 col-md-6">
+								<h5 class="tiles-head">
+									<img src="Assets/tooth-icon.png" class="tiles-icon"> Head 1
+								</h5>
+								<p class="tiles-desc">
+									Description of head 1. lorem ipsum dolor sit amet consecturer adipsiicib, elit.
+								</p>
+							</div>
+							<div class="col-lg-4 col-md-6">
+								<h5 class="tiles-head">
+									<img src="Assets/tooth-icon.png" class="tiles-icon"> Head 1
+								</h5>
+								<p class="tiles-desc">
+									Description of head 1. lorem ipsum dolor sit amet consecturer adipsiicib, elit.
+								</p>
+							</div>
+							<div class="col-lg-4 col-md-6">
+								<h5 class="tiles-head">
+									<img src="Assets/tooth-icon.png" class="tiles-icon"> Head 1
+								</h5>
+								<p class="tiles-desc">
+									Description of head 1. lorem ipsum dolor sit amet consecturer adipsiicib, elit.
+								</p>
+							</div>
+							<div class="col-lg-4 col-md-6">
+								<h5 class="tiles-head">
+									<img src="Assets/tooth-icon.png" class="tiles-icon"> Head 1
+								</h5>
+								<p class="tiles-desc">
+									Description of head 1. lorem ipsum dolor sit amet consecturer adipsiicib, elit.
+								</p>
+							</div>
+							<div class="col-lg-4 col-md-6">
+								<h5 class="tiles-head">
+									<img src="Assets/tooth-icon.png" class="tiles-icon"> Head 1
+								</h5>
+								<p class="tiles-desc">
+									Description of head 1. lorem ipsum dolor sit amet consecturer adipsiicib, elit.
+								</p>
+							</div>
+							<div class="col-lg-4 col-md-6">
+								<h5 class="tiles-head">
+									<img src="Assets/tooth-icon.png" class="tiles-icon"> Head 1
+								</h5>
+								<p class="tiles-desc">
+									Description of head 1. lorem ipsum dolor sit amet consecturer adipsiicib, elit.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
+		<!-- Testimonials Page -->
+		<div class="container ad">
+			<div class="row">
+				<div class="col-md-9 testimonial-container">
+					<h2 class="test-head">Our Happy Clients</h2>
+					<div class="row">
+					<div class="col-lg-4 col-md-6 testimonial">
+						<div class="add-padding">
+							<p class="test-desc">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</p>
+							<h6 class="text-muted text-center">Speaker's Name</h6>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 testimonial">
+						<div class="add-padding">
+							<p class="test-desc">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</p>
+							<h6 class="text-muted text-center">Speaker's Name</h6>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 testimonial">
+						<div class="add-padding">
+							<p class="test-desc">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</p>
+							<h6 class="text-muted text-center">Speaker's Name</h6>
+						</div>
+					</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Doctors Section -->
+		<div class="container ad">
+			<div class="row">
+				<div class="col-md-9 doctors">
+					<h6 class="text-muted doctors-head text-center">Some random text</h6>
+					<h3 class="doctors-head text-center">Highly Qualified Practitioners</h3>
+					<div class="row">
+						<div class="doctor-profile">
+							<img src="Assets/doctor-image.jpg" class="doctor-image">
+							<p class="text-muted text-center">Dr. Vishal Wani</p>
+							<p class="text-muted text-center">BDMS (Pune)</p>
+						</div>
+						<div class="doctor-profile">
+							<img src="Assets/doctor-image.jpg" class="doctor-image">
+							<p class="text-muted text-center">Dr. Vishal Wani</p>
+							<p class="text-muted text-center">BDMS (Pune)</p>
+						</div>
+						<div class="doctor-profile">
+							<img src="Assets/doctor-image.jpg" class="doctor-image">
+							<p class="text-muted text-center">Dr. Vishal Wani</p>
+							<p class="text-muted text-center">BDMS (Pune)</p>
+						</div>
+						<div class="doctor-profile">
+							<img src="Assets/doctor-image.jpg" class="doctor-image">
+							<p class="text-muted text-center">Dr. Vishal Wani</p>
+							<p class="text-muted text-center">BDMS (Pune)</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Contact US section -->
+		<div class="ad contact-us">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-9">
+						<h3 class="contact-head">
+							Contact Us
+						</h3>
+						<p class="text-center">
+							Our helpline is available from 9am to 7pm daily from Monday to Saturday. Call us for booking an appointment, or simply fill the form for appointment.
+							lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem Ipsuml orem ipsum lorem ipsum.
+						</p>
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdF0TzykY__oDrutzWrvwnmXzcf8hO2TCMu32nuOrrmI_5zXg/viewform?embedded=true" width="640" height="600" frameborder="0" marginheight="0" marginwidth="0" class="form-iframe">Loading…</iframe>
+					</div>	
+				</div>
+			</div>
+		</div>
+
+		<!-- Map in frame -->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33810.878565009254!2d73.78740006249998!3d19.950106591011565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bddeb525bd71b51%3A0x169df11728a0753e!2sVakratunda%20Hospital%20Private%20Limited!5e0!3m2!1sen!2sin!4v1598552591461!5m2!1sen!2sin" width="100%" height="400"frameborder="0" style="border:0; margin-top: 20px;" allowfullscreen="" aria-hidden="false" tabindex="0" style="margin-top: 10px;"></iframe>
 	</main>
+	<!-- Footer -->
+
+<!-- 	<footer class="ad">
+		<div class="foot container">
+			<div class="row">
+				<div class="col-md-9">
+					
+				</div>
+			</div>
+		</div>
+	</footer> -->
 </body>
 </html>
